[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesmartkvm"
version = "0.1.0"
description = "Python library for controlling TESmart KVM switches over TCP/IP"
readme = "README.md"
authors = [
    { name = "beantownbytes", email = "code@beantownbytes.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "tomli>=1.1.0; python_version<'3.11'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
]
keywords = ["kvm", "tesmart", "hardware", "networking", "tcp/ip"]

[project.urls]
Homepage = "https://github.com/beantownbytes/tesmartkvm"
Repository = "https://github.com/beantownbytes/tesmartkvm"
Issues = "https://github.com/beantownbytes/tesmartkvm/issues"

[project.scripts]
teskvm = "tesmartkvm.cli:main"

[tool.setuptools]
packages = ["tesmartkvm"]
